# cffi-spy

./: .gitignore  README.md  approx_pi.cpp  approx_pi.h  approx_pi_build.py  pyproject.toml  setup.py
recipe/: meta.yaml
src/: approx_pi_build.py
test/: profile_me.py
