[build-system]
requires = ["setuptools", "setuptools-scm", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "approx_pi"
authors = [
    {name = "Brian McClune", email = "brian.mcclune@unnpp.gov"},
]
description = "Simple approximator functions for Pi."
requires-python = ">=3.8"
dependencies = [
    "cffi>=1.0.0",
]
dynamic = ["version"]