[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "approx_pi"
authors = [
    {name = "Brian McClune", email = "brian.mcclune@unnpp.gov"},
]
description = "Simple approximator functions for Pi."
requires-python = ">=3.8"
dependencies = [
    "cffi>=1.0.0",
]
dynamic = ["version"]

[tool.setuptools_scm]